--- a/LoadingIcons.css
+++ b/LoadingIcons.css
@@ -2,41 +2,41 @@
     Support the loading icon's look 
 */
 p {
-  color: white;
-  position: absolute;
-  z-index: 1;
-  }
+    color: white;
+    position: absolute;
+    z-index: 1;
+}
 
 .LoadingDotsAnimation {
-  font-size: 45px;
+    font-size: 45px;
 }
 
 .LoadingDotsAnimation span {
-  font-size: 45px;
-  animation-name: blink;
-  animation-duration: 1.9s;
-  animation-iteration-count: infinite;
-  animation-fill-mode: both;
+    font-size: 45px;
+    animation-name: blink;
+    animation-duration: 1.9s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
 }
 
 .LoadingDotsAnimation span:nth-child(2) {
-  animation-delay: .4s;
+    animation-delay: .4s;
 }
 
 .LoadingDotsAnimation span:nth-child(3) {
-  animation-delay: .8s;
+    animation-delay: .8s;
 }
 
 @keyframes blink {
-  0% {
-    opacity: .2;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: .2;
-  }
+    0% {
+        opacity: .2;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: .2;
+    }
 }
 /*        .LoadingSpinnerAnimation {
   border: 16px solid #f3f3f3;
@@ -97,8 +97,8 @@ p {
     50% {height:5px;transform:translateY(0px);background:#9b59b6;}
     100% {height:5px;transform:translateY(0px);background:#9b59b6;}
 }
-  
-  #LoadingScreenProgress {
+
+#LoadingScreenProgress {
     width: 70%;
     height: 30px;
     top:calc(50% + 100px);
@@ -107,51 +107,68 @@ p {
     position: absolute;
     z-index: 2;
     border-radius: 30px;
-  }
-    #LoadingScreenBar {
-        width: 0%;
-        height: 30px;
-        background-color: #3498dbcf;
-        position: absolute;
-        font-size: 20px;
-        line-height: 30px;
-        z-index: 3;
-        border-radius: 30px;
-        font-family: 'Roboto', sans-serif;
-    }
-    
-    #LoadingSpinner {
-        top:calc(50% - 40px);
-        left:calc(50% - 82px);
-    }
-    
-    #LoadingDots {
-        top:calc(50%);
-        left:calc(50% - 81.6px);
-        font-family: 'Squada One', cursive;
-    }
-    
-    #GLCanvas{
-        position: absolute;
-        z-index: 0;
-    }
-    
-    #LeftSpan{
-        display: none;
-        width: 80px;
-        margin-right: 5px;
-    }
-    
-    #RightSpan{
-        display: none;
-        width: 80px;
-        margin-left: 5px;
-    }
-    
-    #LoadingIconParent{
-        position: relative;
-    }
-    
-    table, th, td {
+}
+#LoadingScreenBar {
+    width: 0%;
+    height: 30px;
+    background-color: #3498dbcf;
+    position: absolute;
+    font-size: 20px;
+    line-height: 30px;
+    z-index: 3;
+    border-radius: 30px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#LoadingSpinner {
+    top:calc(50% - 40px);
+    left:calc(50% - 82px);
+}
+
+#LoadingDots {
+    top:calc(50%);
+    left:calc(50% - 81.6px);
+    font-family: 'Squada One', cursive;
+}
+
+#GLCanvas{
+    position: absolute;
+    z-index: 0;
+}
+
+#LeftSpan{
+    display: none;
+    width: 80px;
+    margin-right: 5px;
+}
+
+#RightSpan{
+    display: none;
+    width: 80px;
+    margin-left: 5px;
+}
+
+#LoadingIconParent{
+    position: relative;
+}
+
+table, th, td {
     border: 1px solid black;
-    }
+}
+
+#DeathNum {
+    font-family: 'Bree Serif', serif;
+    font-size: 22px;
+}
+
+#Time {
+    font-family: 'Bree Serif', serif;
+    margin-left: 20px;
+    font-size: 22px;
+}
+
+#Tip {
+    font-family: 'Bree Serif', serif;
+    font-size: 22px;
+    color: #B42688;
+}
